# flat-knn

./: .gitignore  Cargo.toml  LICENSE  README.md  python-faiss-benchmark.py
.github/workflows/: ci.yml
benches/: knn_benchmark.rs
src/: lib.rs  main.rs
