[package]
name = "flat-knn"
version = "0.1.0"
edition = "2021"
description = "Simple and efficient SIMD-accelerated library for k-nearest neighbors search."
license = "MIT"
repository = "https://github.com/simonplhak/flat-knn"
authors = ["Simon Plhak"]

[dependencies]
simsimd = "6.4.9"
ordered-float = "4.2.0"
rayon = "1.10.0"
half = "2.7.1"

[dev-dependencies]
ndarray = "0.16.0" 
linfa-nn = "0.8.0"
rand = "0.9.2"
